syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

message KademliaStoreResponse {
    bool accepted = 1;
}