syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

import "BgKademliaFindRequest.proto";
import "BgKademliaNode.proto";

message KademliaFindNodeResponse {
    KademliaFindRequest request = 1;
    repeated KademliaNode results = 2;
}