syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

message KademliaPing {
    bool reply = 1;
}